--- a/src/components/CourseItem/index.css
+++ b/src/components/CourseItem/index.css
@@ -1,10 +1,67 @@
 .s-con {
   padding: 20px;
 }
+
 .loader-con {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   min-height: 60vh;
+}
+
+nav{
+  background-color: #f1f5f9;
+  padding: 20px;
+  min-height: 10vh;
+  width: 100%;
+}
+
+.logo{
+  height: 70px;
+  width: 100px;
+}
+
+.fail-cont{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+.fail-image{
+  height: 250px;
+  width: 250px;
+}
+
+.fh{
+  color: #1e293b;
+  font-size: 30px;
+  font-weight: bold;
+  font-family: 'Roboto';
+}
+
+.fp{
+  color: #475569;
+  font-size: 16px;
+  font-family: 'Roboto';
+}
+
+.fb{
+  background-color: #4656a1;
+  color: #ffffff;
+  font-family: 'Roboto';
+  border: none;
+  padding: 7px;
+  border-radius: 3px;
+}
+
+ul{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  list-style-type: none;
+  padding-left: 0px;
 }
