--- a/src/components/CourseItemDetails/index.css
+++ b/src/components/CourseItemDetails/index.css
@@ -4,3 +4,78 @@
   align-items: center;
   padding: 20px;
 }
+
+nav {
+  background-color: #f1f5f9;
+  padding: 20px;
+  min-height: 10vh;
+  width: 100%;
+}
+
+.logo {
+  height: 70px;
+  width: 100px;
+}
+
+.view {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  background-color: #ffffff;
+  width: 80%;
+}
+
+.vi {
+  height: 250px;
+  width: 250px;
+  margin-right: 10px;
+}
+
+.vd {
+  color: #64748b;
+  font-family: 'Roboto';
+  font-size: 22px;
+}
+
+.fail-cont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+.fail-img {
+  height: 250px;
+  width: 250px;
+  margin-right: 16px;
+}
+
+.fh {
+  color: #1e293b;
+  font-size: 30px;
+  font-weight: bold;
+  font-family: 'Roboto';
+}
+
+.fp {
+  color: #475569;
+  font-size: 16px;
+  font-family: 'Roboto';
+}
+
+.fb {
+  background-color: #4656a1;
+  color: #ffffff;
+  font-family: 'Roboto';
+  border: none;
+  padding: 7px;
+  border-radius: 3px;
+}
+
+.vh {
+  color: #1e293b;
+  font-size: 30px;
+  font-family: 'Roboto';
+  margin-bottom: 7px;
+}
